--- a/gsw_c_v3.05/CMakeLists.txt
+++ b/gsw_c_v3.05/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(gswteos-10 SHARED gsw_oceanographic_toolbox.c gsw_saar.c)
+add_library(gswteos-10 STATIC gsw_oceanographic_toolbox.c gsw_saar.c)
 include_directories(BEFORE ".")
 set(CMAKE_C_FLAGS "-O3")
