--- a/pycnocline.cbp
+++ b/pycnocline.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-v O2  -p 1027.1 data/test.nc data/pycnocline.nc" />
+				<Option parameters="-v O2,u,v,temp,salt  -p 1027.1 data/test.nc data/pycnocline.nc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -38,7 +38,6 @@
 			<Add option="-lnetcdf_c++4" />
 			<Add option="-lm" />
 			<Add option="-lnetcdf" />
-			<Add option="-lgswteos-10" />
 		</Linker>
 		<Unit filename="include/cxxopts.hpp" />
 		<Unit filename="include/interpolation.hpp" />
