--- a/ncii.cbp
+++ b/ncii.cbp
@@ -2,22 +2,22 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ropi" />
+		<Option title="ncii" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ropi" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/ncii" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-v O2,u,v,temp,salt  -p 1027.1 data/test.nc data/pycnocline.nc" />
+				<Option parameters="-v O2,u,v,temp,salt  -p 1026.5,1027.1 data/test.nc data/pycnocline.nc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ropi" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/ncii" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
